src/objects/Event_Log__c.object
<CustomObject>
    <description>Generic object used to log events</description>
    <fields>
        <fullName>Batch_ID__c</fullName>
        <label>Batch ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Event Logs</relationshipLabel>
        <relationshipName>Event_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Funnel_Criteria__c</fullName>
        <label>Funnel Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mogli Gateway</label>
        <referenceTo>Mogli_SMS__Gateway__c</referenceTo>
        <relationshipLabel>Event Logs</relationshipLabel>
        <relationshipName>Event_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report Name</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Funnel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Log</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Event Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>